# EchtzeitKithara

CrystalT2/: AddNewProductDialog.cpp  AddNewProductDialog.h  AddNewProductDialog.ui  AdminSettingsDialog.cpp  AdminSettingsDialog.h  AdminSettingsDialog.ui  AdvancedSettingsDialog.cpp  AdvancedSettingsDialog.h  AdvancedSettingsDialog.ui  CMakeLists.txt  CleanImageDialog.cpp  CleanImageDialog.h  CleanImageDialog.ui  ControlsWithColorStatus.cpp  ControlsWithColorStatus.h  CoolingDialog.cpp  CoolingDialog.h  CoolingDialog.ui  CrystalT2Plugin.cpp  CrystalT2Plugin.h  DeactivateAlarmLevelOptionPanel.cpp  DeactivateAlarmLevelOptionPanel.h  DisplayVideo.cpp  DisplayVideo.h  DisplayVideo.ui  EditProductDialog.cpp  EditProductDialog.h  EditProductDialog.ui  EjectedBottlesDialog.cpp  EjectedBottlesDialog.h  EjectedBottlesDialog.ui  EtherCatSlaveData.h  FileTransferDialog.cpp  FileTransferDialog.h  FileTransferDialog.ui  GeneralDialog.cpp  GeneralDialog.h  GeneralDialog.ui  GlobalConst.h  GraphicsVideoView.cpp  (+87 more)
CrystalT2_rt/: AveragingProductData.cpp  AveragingProductData.h  CMakeLists.txt  ImageData.cpp  ImageData.h  KitharaVisionDLL.cpp  ProgramLogicController.cpp  ProgramLogicController.h
